<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World!</string>
    <string name="app_name">GoCart</string>
    <string name="menu_find_store">Find Store</string>
    <string name="menu_shop_list">Shopping List</string>
    <string name="menu_scan_item">Scan Item</string>
    <string name="menu_shop_cart">Shopping Cart</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_offers">Offers</string>
    <string name="menu_social">Social</string>
</resources>
