<?xml version="1.0" encoding="utf-8"?>
    <menu xmlns:android="http://schemas.android.com/apk/res/android">
        <item android:id="@+id/item1" android:orderInCategory="1" android:title="@string/menu_find_store" android:icon="@android:drawable/ic_menu_search"></item>
        <item android:id="@+id/item2" android:title="@string/menu_shop_list" android:orderInCategory="2" android:icon="@android:drawable/ic_menu_agenda"></item>
        <item android:id="@+id/item3" android:title="@string/menu_scan_item" android:orderInCategory="3"></item>
        <item android:id="@+id/item4" android:title="@string/menu_shop_cart" android:orderInCategory="4"></item>
        <item android:title="@string/menu_settings" android:icon="@android:drawable/ic_menu_preferences" android:orderInCategory="5" android:id="@+id/item5"></item>
        <item android:title="@string/menu_offers" android:orderInCategory="6" android:id="@+id/item6"></item>
        <item android:title="@string/menu_social" android:icon="@android:drawable/ic_menu_help" android:id="@+id/item7" android:orderInCategory="7"></item>
    </menu>
